crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@44.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table rlp4_2 partition of rlp4 for values from (25) to (29);
---
CreateStmt@0..67
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..19
    Ident@13..19 "rlp4_2"
  Whitespace@19..20 " "
  Partition@20..29 "partition"
  Whitespace@29..30 " "
  Of@30..32 "of"
  Whitespace@32..33 " "
  RangeVar@33..37
    Ident@33..37 "rlp4"
  Whitespace@37..38 " "
  For@38..41 "for"
  Whitespace@41..42 " "
  Values@42..48 "values"
  Whitespace@48..49 " "
  PartitionBoundSpec@49..65
    From@49..53 "from"
    Whitespace@53..54 " "
    Ascii40@54..55 "("
    AConst@55..57
      Iconst@55..57 "25"
    Ascii41@57..58 ")"
    Whitespace@58..59 " "
    To@59..61 "to"
    Whitespace@61..62 " "
    Ascii40@62..63 "("
    AConst@63..65
      Iconst@63..65 "29"
  Ascii41@65..66 ")"
  Ascii59@66..67 ";"

