crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@443.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into boolvalues values('t'),('f');"
---
InsertStmt@0..41
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "boolvalues"
  Whitespace@22..23 " "
  SelectStmt@23..39
    Values@23..29 "values"
    Ascii40@29..30 "("
    List@30..33
      AConst@30..33
        Sconst@30..33 "'t'"
    Ascii41@33..34 ")"
    Ascii44@34..35 ","
    Ascii40@35..36 "("
    List@36..39
      AConst@36..39
        Sconst@36..39 "'f'"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

