crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@446.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table boolp_f partition of boolp for values in('f');"
---
CreateStmt@0..59
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..20
    Ident@13..20 "boolp_f"
  Whitespace@20..21 " "
  Partition@21..30 "partition"
  Whitespace@30..31 " "
  Of@31..33 "of"
  Whitespace@33..34 " "
  RangeVar@34..39
    Ident@34..39 "boolp"
  Whitespace@39..40 " "
  For@40..43 "for"
  Whitespace@43..44 " "
  Values@44..50 "values"
  Whitespace@50..51 " "
  PartitionBoundSpec@51..57
    InP@51..53 "in"
    Ascii40@53..54 "("
    AConst@54..57
      Sconst@54..57 "'f'"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

